fix: align burger menu to trigger (#2555)

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -85,7 +85,15 @@
     color: var(--colour-text);
 }
 
-.burgerIcon,
+.burgerIcon {
+    display: block;
+    position: relative;
+    inline-size: var(--size-icon-m);
+    block-size: var(--border-width-m);
+    background: currentcolor;
+    border-radius: var(--radius-xs);
+}
+
 .burgerIcon::before,
 .burgerIcon::after {
     content: "";
